<resources>
    <string name="app_name">ConfigureCheck</string>
    <string name="activity_title_category">测试类型</string>
    <string name="choose_category_type">请选择测试类型:</string>
    <string name="CMCC_test_spec_date">基于CMCC测试规范:发布日期2013&#8211;02&#8211;25</string>
    <string name="others">其它</string>
    <string name="title_activity_main">CTSC</string>
    <string name="CTSC_version">CTSC版本：%s</string>
    <string name="menu_CTSC_ver">CTSC版本</string>
    <string name="activity_title_send_test">送测检查</string>
    <string name="CMCC_test_default_config_check">CMCC送测手机默认配置</string>
    <string name="one_button_check">一键检查</string>
    <string name="send_test_instruction">说明：在准备样机寄送到中国移动前，可以使用此功能检查手机默认配置是否符合入库测试要求。</string>
    <string name="activity_title_self_test">自测检查</string>
    <string name="manufacturer_test_config_check">厂商入库自测配置检查</string>
    <string name="protocol_conformance_test">协议、一致性</string>
    <string name="service_test">业务测试</string>
    <string name="self_test_instruction">说明：在产品自测阶段，不同的测试项目对设置有特殊要求，此功能可以帮助您检查特定测试类别的手机配置是否满足要求。</string>
    <string name="mtk_test_config_check">MTBF自测配置检查</string>
    <string name="MTBF">MTBF</string>
    <string-array name="category_CMCC_send_test">
        <item>@string/one_button_check</item>
    </string-array>
    <string-array name="category_manufacturer_self_test">
        <item>@string/protocol_conformance_test</item>
        <item>@string/service_test</item>
    </string-array>
    <string-array name="category_MTK_self_test">
        <item>@string/MTBF</item>
    </string-array>
    <string name="help">帮助</string>
    <string-array name="category_others">
        <item>@string/help</item>
    </string-array>
    <string name="wc_ttcn_3g_6210">无线通信_TTCN 3G(6210)</string>
    <string name="wc_anritsu_23g_8470">无线通信_Anritsu 23G(8470)</string>
    <string name="wc_ttcn_23g_6210">无线通信_TTCN 23G(6210)</string>
    <string name="wc_rrm_6200">无线通信_RRM(6200)</string>
    <string name="wc_rf_6010_8960">无线通信_RF 6010 &amp; 8960</string>
    <string name="wc_network_iot">无线通信_网络IOT</string>
    <string-array name="protocol_conformance_sub_category">
        <item>@string/wc_ttcn_3g_6210</item>
        <item>@string/wc_anritsu_23g_8470</item>
        <item>@string/wc_ttcn_23g_6210</item>
        <item>@string/wc_rrm_6200</item>
        <item>@string/wc_rf_6010_8960</item>
        <item>@string/wc_network_iot</item>
    </string-array>
    <string name="wc_basic_communication">无线通信_基本通信</string>
    <string name="wc_phone_card_compatible">无线通信_机卡兼容</string>
    <string name="sa_local_func">业务应用_本地功能</string>
    <string name="sa_broadband_internet">业务应用_宽带互联网</string>
    <string name="sa_video_tel">业务应用_可视电话</string>
    <string name="sa_streaming">业务应用_流媒体</string>
    <string name="sa_dm_lab_net">业务应用_DM3.0(实验网)</string>
    <string name="sa_dm_real_net">业务应用_DM3.0(现网)</string>
    <string name="sa_mobile_tv">业务应用_手机电视</string>
    <string name="sa_agps">业务应用_AGPS</string>
    <string name="sa_wlan">业务应用_WLAN</string>
    <string name="sr_mtbf">软件可靠性_MTBF</string>
    <string name="sr_local_perf">软件可靠性_本地性能</string>
    <string name="hr_power_consumption">硬件可靠性_功耗</string>
    <string name="fd_field_test">外场_外场测试</string>
    <string-array name="service_test_sub_category">
        <item>@string/wc_basic_communication</item>
        <item>@string/wc_phone_card_compatible</item>
        <item>@string/sa_local_func</item>
        <item>@string/sa_streaming</item>
        <item>@string/sa_dm_lab_net</item>
        <item>@string/sa_dm_real_net</item>
        
        <item>@string/sa_agps</item>
        <item>@string/sa_wlan</item>
        <item>@string/sr_mtbf</item>
        <item>@string/sr_local_perf</item>
        <item>@string/hr_power_consumption</item>
        <item>@string/fd_field_test</item>
    </string-array>
    <string name="tab_label_auto">自动检查项</string>
    <string name="tab_label_manual">人工检查项</string>
    <string name="activity_title_check_result">检查结果</string>
    <string name="auto_check_result_title">已自动检查下列设置，点击可了解详情</string>
    <string name="choose_item_to_config">请勾选错误项进行修改</string>
    <string name="auto_config">修改设置</string>
    <string name="manual_check_result_title">请人工检查或配置下列设置，点击可了解详情</string>
    <string name="choose_item_to_confirm">请勾选设置项进行确认</string>
    <string name="right_confirm">正 确</string>
    <string name="wrong_confirm">错 误</string>
    <string name="rollback_confirm">还 原</string>
    <string name="click_to_know_info">请点击以了解详情</string>
    <string name="hint_name_title">[检查项]</string>
    <string name="hint_current_value_title">[当前值]</string>
    <string name="hint_requirement_title">[要求]</string>
    <string name="hint_notice_title">[提示]</string>
    <string name="hint_notice">此检查项不能自动设置</string>
    <string name="menu_check_all">全部勾选</string>
    <string name="menu_uncheck_all">全部取消勾选</string>
    <string name="menu_check_report">检查报告</string>
    <string name="menu_export_check_report">导出检查报告</string>
    <string name="alert_dialog_title">SOP要求</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_forward">前往设置界面</string>
    <string name="alert_restore_title">恢复出厂设置</string>
    <string name="alert_restore_note">注意：请在一键检查前执行恢复出厂设置功能！\n操作方法：设置->个人->备份和重置-恢复出厂设置。</string>
    <string name="alert_modify_title">修改确认</string>
    <string name="alert_modify_message">将修改如下几项，请确认: </string>
    <string name="activity_title_check_report">设置检查报告</string>
    <string name="wrong_tile">[错误 %d]</string>
    <string name="unknown_title">[未知 %d]</string>
    <string name="right_title">[正确 %d]</string>
    <string name="export_file_name">CheckReport_%1$s_%2$s.csv</string>
    <string name="export_file_succeed">%1$s已导出到%2$s文件夹。</string>
    <string name="export_file_failed">检查报告导出失败!</string>
    <string name="export_dir">%1$s/ConfigureCheck</string>
    <string name="export_time">生成时间: </string>
    <string name="export_phone_info">手机信息,IMEI: </string>
    <string name="csv_report_title">No.,检查项,查询结果,判定,说明</string>
    <string name="wrong_judge">错误</string>
    <string name="unknown_judge">未知</string>
    <string name="right_judge">正确</string>
    <string name="activity_title_help">帮助</string>
    <string name="SOP_REFER">\n详见SOP:</string>
    <string name="SOP_Protocol">"\n《CMCC_无线通信_协议测试前必做的checklist_Important.ppt》"</string>
    <string name="SOP_PhoneCard">"\n《CMCC_无线通信_机卡兼容.ppt》"</string>
    <string name="SOP_IOT">"\n《CMCC_无线通信_网络IOT.ppt》"</string>
    <string name="SOP_DM">"\n《CMCC_业务应用_DM3.0.ppt》"</string>
    <string name="SOP_FieldTest">"\n《CMCC_外场_外场测试.ppt》"</string>
    <string name="SOP_LOCAL_TEST">"\n《CMCC_软件可靠性_本地性能.ppt》"</string>
    <string name="SOP_self_check">"\n详见SOP:\n《CMCC_Common_厂商自测Check_list.xls》\n特殊提醒：当进行协议测试或机卡兼容测试时，需手动设置"</string>
    <string name="title_Network_Mode">选网模式</string>
    <string name="note_NM_TD_SCDMA_Only">设置选网模式为TD-SCDMA Only：工模->NetworkSelecting->SetPreferred network type:->选择"TD-SCDMA only"</string>
    <string name="note_NM_TD_SCDMA_Preferred">设置选网模式为TD-SCDMA Preferred:工模->NetworkSelecting->SetPreferred network type:->选择"TD-SCDMA preferred"</string>
    <string name="note_NM_TD_DUAL_MODE">设置选网模式为GSM/TD-SCDMA(auto):工模->NetworkSelecting->SetPreferred network type:->选择"GSM/TD-SCDMA(auto)" </string>
    <string name="value_NM_TD_SCDMA_Only">TD-SCDMA Only</string>
    <string name="value_NM_TD_SCDMA_Preferred">TD-SCDMA Preferred</string>
    <string name="value_NM_TD_DUAL_MODE">GSM/TD-SCDMA(auto)</string>
    <string name="value_NM_TD_SCDMA_Preferred_faild">GSM/TD-SCDMA(auto) 修改设置失败</string>
    <string name="title_GPRS_ALWAYS_ATTACH">GPRS Always attach</string>
    <string name="title_GPRS_ALWAYS_ATTACH_CONTINUE">GPRS Always attach Continue</string>
    <string name="note_GPRS_always_on">设置GPRS always on：工模(EM)->GPRS->选中SIM1->点击"Always Attach"</string>
    <string name="value_GPRS_not_always_on">when needed</string>
    <string name="value_GPRS_when_needed_continue">when needed continue</string>
    <string name="value_GPRS_not_to_specify">not to specify</string>
    <string name="value_GPRS_always_on">always attach</string>
    <string name="value_GPRS_attach_continue">always attach continue </string>
    <string name="note_GPRS_attach_continue">设置GPRS always attach Continue：工模->GPRS->选中SIM1->选中"Always Attach Continue" ->SIM1 即可开机GPRS Attach,如需要PDP激活，需手动开启数据连接。 注意：测试完成后，请将设置还原，避免影响其他测试，通过选择"Not to Specify";若在测试中手动开启Always Attach continue,请正常关机重启手机，并重新测试该case，否则可能导致仪表连接失败</string>
    <string name="title_CFU">CFU</string>
    <string name="note_CFU_off">关闭开机CFU业务或设置CFU为Default：工模->CFU->选中"Always not query"或"Default"</string>
    <string name="value_CFU_off">Off</string>
    <string name="value_CFU_default">Default</string>
    <string name="value_CFU_always_query">Always query</string>
    <string name="value_CFU_always_not_query">Always not query</string>
    <string name="title_CTA_FTA">Modem模式</string>
    <string name="note_CTA_FTA_off">禁止开启CTA和FTA开关: 工模->Modem Test->选中"None"或"IOT"或"Operator"或"Factory"</string>
    <string name="title_integrity_check_off">Integrity Check</string>
    <string name="note_integrity_check_off">关闭Integrity Check：工模->Modem Test->选中"Integrity off"。注意：完成测试后，请关闭integrity off,即打开Integrity Check,以免影响其他测试</string>
    <string name="value_modem_none">None</string>
    <string name="value_modem_Integrity_off">Integrity off</string>
    <string name="value_modem_CTA">CTA</string>
    <string name="value_modem_FTA">FTA</string>
    <string name="value_modem_IOT">IOT</string>
    <string name="value_modem_Operator">Operator</string>
    <string name="value_modem_Factory">Factory</string>
    <string name="title_Data_Connection">数据连接</string>
    <string name="note_DC_off">关闭数据连接:设置->SIM卡管理->数据连接->选中"关闭"</string>
    <string name="value_DC_off">关闭</string>
    <string name="note_DC_on">打开数据连接:设置->SIM卡管理->数据连接->选中SIM1</string>
    <string name="value_DC_on">打开</string>
    <string name="title_Data_ROAM">数据漫游</string>
    <string name="note_DR_off">关闭数据漫游:设置->SIM卡管理->国际漫游->数据漫游->去掉勾选可关掉数据漫游</string>
    <string name="value_DR_on">打开</string>
    <string name="note_DR_on">打开数据漫游:设置->SIM卡管理->国际漫游->数据漫游->勾选可打开数据漫游</string>
    <string name="value_DR_off">关闭</string>
    <string name="title_PLMN">PLMN</string>
    <string name="value_PLMN_auto_select">自动选择</string>
    <string name="note_PLMN_auto_select">PLMN选择设置为自动选择：设置->更多->移动网络->选中"自动选择"</string>
    <string name="value_PLMN_manual_select">手动选择</string>
    <string name="value_SIM">请插入SIM卡</string>
    <string name="value_GEMINI_DT_SUPPORT">双卡双通</string>
    <string name="value_GEMINI_SINGLE_SUPPORT">双卡单通</string>
    <string name="value_SINGLE_SD_SUPPORT">单卡单通</string>
    <string name="title_GEMINI_SUPPORT">待机状态</string>
    <string name="note_GEMINI_SUPPORT">检测并提示当前手机待机状态</string>
    <string name="title_SIM_STATE">SIM卡状态</string>
    <string name="note_DUAL_SIM_STATE">必须插入两张卡，请检查</string>
    <string name="value_DUAL_SIM_STATE">当前已插入两张卡</string>
    <string name="value_SIM_STATE">已插入卡</string>
    <string name="note_SINGLE_SIM_CHECK">请只插入一张卡，且放入可注册3G网络的卡槽</string>
    <string name="note_SIM_3G_CHECK">请将卡插入可注册3G网络的卡槽</string>
    <string name="value_SIM_3G">卡已正确插入</string>
    <string name="title_time">时间</string>
    <string name="note_time">设置北京时间:设置->时间->手动设置成当前北京时间或者勾选"自动确定时区"并且选择"自动确定日期和时间"->使用网络提供时间</string>
    <string name="value_time_no_www">当前网络不可用，无法确定实际时间</string>
    <string name="value_time_zone">当前非北京时区</string>
    <string name="value_time_time_zone">未设定北京时区和自动使用网络时间</string>
    <string name="value_time_time">未设定自动使用网络时间,当前时间可能不正确</string>
    <string name="value_time">已设定北京时区和自动使用网络时间</string>
    <string name="title_sleep">休眠</string>
    <string name="note_sleep">设定休眠时间30分钟:设置->显示->休眠->选定30分钟</string>
    <string name="value_sleep">无操作</string>
    <string name="value_sleep_end">分钟后</string>
    <string name="value_sleep_max">无操作30分钟后</string>
    <string name="title_lockscreen">不锁定屏幕</string>
</resources>