<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dip"
    android:layout_marginRight="5dip" >
    
    <RelativeLayout
        android:id="@+id/auto_check_result_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/configure_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <TextView
                android:id="@+id/choose_to_config_text"
                android:text="@string/choose_item_to_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/auto_configure_btn"
                android:text="@string/auto_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/choose_to_config_text"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/auto_list_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_above="@id/configure_layout">
            <TextView
                android:id="@+id/auto_result_title"
                android:text="@string/auto_check_result_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ListView
                android:id="@+id/auto_check_result_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/auto_result_title"/>
        </RelativeLayout>  
    </RelativeLayout>
    
	<RelativeLayout
		android:id="@+id/manual_check_result_tab"
		android:layout_width="match_parent"
        android:layout_height="match_parent">
	    <RelativeLayout
            android:id="@+id/confirm_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <TextView
                android:id="@+id/choose_to_confirm_text"
                android:text="@string/choose_item_to_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RelativeLayout 
                android:id="@+id/confirm_btns"
                android:layout_width="match_parent" 
                android:layout_height="wrap_content"
                android:layout_below="@id/choose_to_confirm_text">
                <Button 
                    android:id="@+id/right_confirm_btn" 
                    android:text="@string/right_confirm" 
                    android:layout_width="105dip" 
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"/>
                <Button android:id="@+id/wrong_confirm_btn" 
                    android:text="@string/wrong_confirm" 
                    android:layout_width="105dip" 
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>
                <Button android:id="@+id/unknown_confirm_btn" 
                    android:text="@string/rollback_confirm" 
                    android:layout_width="105dip" 
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
		</RelativeLayout> 
        <RelativeLayout
            android:id="@+id/manual_list_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_above="@id/confirm_layout">   
		    <TextView
			    android:id="@+id/manual_result_title"
			    android:text="@string/manual_check_result_title"
			    android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
		    <ListView
			    android:id="@+id/manual_check_result_list"
			    android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/manual_result_title"/>
		</RelativeLayout> 
	</RelativeLayout>
	
</RelativeLayout>
