<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dip"
    android:layout_marginRight="5dip">
    
    <TextView
        android:id="@+id/CMCC_spec_date"
        android:text="@string/CMCC_test_spec_date"
        android:layout_width="wrap_content"
        android:layout_height="32dip"
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:layout_alignParentBottom="true"/>
    
    <RelativeLayout
        android:id="@+id/CMCC_send_test_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        <TextView
            android:id="@+id/CMCC_send_test_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/CMCC_test_default_config_check"
            android:textSize="14sp"/>
        <View
            android:id="@+id/single_line1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#3CFFFFFF"
            android:layout_below="@id/CMCC_send_test_title"/>
        <ListView
            android:id="@+id/CMCC_send_test_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_below="@id/single_line1">
        </ListView>
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/manufacturer_self_test_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/CMCC_send_test_layout"
        android:layout_above="@id/CMCC_spec_date">
        <TextView
            android:id="@+id/manufacturer_self_test_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/manufacturer_test_config_check"
            android:textSize="14sp"/>
        <View
            android:id="@+id/single_line2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#3CFFFFFF"
            android:layout_below="@id/manufacturer_self_test_title"/>
        <ListView
            android:id="@+id/manufacturer_self_test_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_below="@id/single_line2">
        </ListView>
    </RelativeLayout>

</RelativeLayout>